--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Магазин фермерских продуктов</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+<header class="header">
+    <div class="logo">
+        <img src="logo.png" alt="Логотип">
+        <h1>МАГАЗИН <br>ФЕРМЕРСКИХ<br> ПРОДУКТОВ</h1>
+    </div>
+    <nav class="nav">
+        <a href="#">Возможности</a>
+        <a href="#">Продукция</a>
+        <a href="#">Услуги</a>
+        <a href="#">Полезное</a>
+        <a href="#">О нас</a>
+    </nav>
+</header>
+<main class="main-content">
+    <section class="intro">
+        <h2>Следите за своим здоровьем и питайтесь правильно!</h2>
+        <p>Магазин фермерских экологически чистых продуктов. Заказывайте нашу продукцию, повышайте качество своей жизни.</p>
+    </section>
+</main>
 </body>
 </html>
